🚀 new version of dark mode js==> cause bug turbolink / ⚙️ remove useless pkg ==> to finish

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -26,7 +26,7 @@
   --stars-yellow: #edb867;
 }
 
-[data-theme="dark"] {
+[color-theme="dark"] {
   --bg-color: #212121;
   --link-color: #d3d3d3;
   --link-accent: #f5f5f5;
@@ -38,6 +38,13 @@
   --hr: rgba(255, 255, 255, 0.4);
   --stars-grey: #c0c0c0;
   --stars-yellow: #f7df1e;
+}
+
+:root[color-theme="light"] .light--hidden {
+  display: none;
+}
+:root[color-theme="dark"] .dark--hidden {
+  display: none;
 }
 
 body {
