--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -76,70 +76,84 @@ nav.stroke .navbar-link:hover:after {
 }
 
 // toggle switch
-.theme-switch-wrapper {
-  display: flex;
-  align-items: center;
-  height: 34px;
-  margin-top: 6px;
-}
-.theme-switch {
-  display: inline-block;
-  height: 100%;
-  position: relative;
-  width: 60px;
+// .theme-switch-wrapper {
+//   display: flex;
+//   align-items: center;
+//   height: 34px;
+//   margin-top: 6px;
+// }
+// .theme-switch {
+//   display: inline-block;
+//   height: 100%;
+//   position: relative;
+//   width: 60px;
+// }
+
+// .theme-switch input {
+//   display: none;
+// }
+
+// .slider {
+//   background-color: $light-gray;
+//   bottom: 0;
+//   cursor: pointer;
+//   left: 0;
+//   position: absolute;
+//   right: 0;
+//   top: 0;
+//   transition: 0.4s;
+//   text-align: center;
+// }
+
+// .slider:before {
+//   background-color: black;
+//   bottom: 4px;
+//   font-family: "Font Awesome 5 Free";
+//   font-weight: 900;
+//   content: "\f186";
+//   height: 26px;
+//   left: 4px;
+//   position: absolute;
+//   transition: 0.4s;
+//   width: 26px;
+//   font-size: 15px;
+//   color: #ffdf5d;
+//   padding-top: 2px;
+// }
+
+// input:checked + .slider {
+//   background-color: #66bb6a;
+// }
+// input:checked + .slider:before {
+//   font-family: "Font Awesome 5 Free";
+//   font-weight: 900;
+//   content: "\f185";
+//   color: #fab005;
+//   background-color: white;
+// }
+
+// input:checked + .slider:before {
+//   transform: translateX(26px);
+// }
+
+// .slider.round {
+//   border-radius: 34px;
+// }
+
+// .slider.round:before {
+//   border-radius: 50%;
+// }
+
+.color_btn {
+  border: none;
+  outline: none;
+  background: transparent;
 }
 
-.theme-switch input {
-  display: none;
-}
-
-.slider {
-  background-color: $light-gray;
-  bottom: 0;
-  cursor: pointer;
-  left: 0;
-  position: absolute;
-  right: 0;
-  top: 0;
-  transition: 0.4s;
-  text-align: center;
-}
-
-.slider:before {
-  background-color: black;
-  bottom: 4px;
-  font-family: "Font Awesome 5 Free";
-  font-weight: 900;
-  content: "\f186";
-  height: 26px;
-  left: 4px;
-  position: absolute;
-  transition: 0.4s;
-  width: 26px;
-  font-size: 15px;
-  color: #ffdf5d;
-  padding-top: 2px;
-}
-
-input:checked + .slider {
-  background-color: #66bb6a;
-}
-input:checked + .slider:before {
-  font-family: "Font Awesome 5 Free";
-  font-weight: 900;
-  content: "\f185";
+.light--hidden {
   color: #fab005;
-  background-color: white;
 }
 
-input:checked + .slider:before {
-  transform: translateX(26px);
-}
-
-.slider.round {
-  border-radius: 34px;
-}
-
-.slider.round:before {
-  border-radius: 50%;
+.dark--hidden {
+  color: #ffdf5d;
 }
